Modification de la structure du header et du footer du tableau des évènements dans chacun des templates afin de corriger des bugs mineurs d'affichage sous Firefox, et de simplifier légèrement le code css nécessaire dans les thèmes.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2216 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/classical.css
+++ b/src/vigilo/themes/public/vigiboard/css/classical.css
@@ -13,15 +13,11 @@
 	border: solid 1px white;
 }
 
-.vigitable>thead>tr:first-child>th,
-.vigitable>tfoot>tr>th {
+.vigitable .table_title,
+.vigitable .line_pagination,
+.vigitable .pagination {
     color: white;
     background-color: #4682b4;
-}
-
-.left_arrow,
-.right_arrow {
-    background-color: #FFFFFF;
 }
 
 .history_table thead,
