--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -37,7 +37,7 @@
 	        <tr>
 	            <th colspan="${columns_count}">
 	        
-		            <span class="navigation_arrow left_arrow">
+		            <div class="navigation_arrow left_arrow">
 				        <py:choose>
 							<img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" />
 							
@@ -54,9 +54,9 @@
 								<img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
 					     	</a>
 					    </py:choose>
-		            </span>
+		            </div>
 		
-		            <span class="navigation_arrow right_arrow">
+		            <div class="navigation_arrow right_arrow">
 				        <py:choose>
 				        	<img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" />
 				        	
@@ -72,18 +72,18 @@
 					        	<img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
 					     	</a>
 					    </py:choose>
-		            </span>
+		            </div>
 		            
 					<py:choose>
-		          	    <span py:when="hostname and servicename" class="table_title">
-		          			Events table for service "${servicename}" on "${hostname}"
-				        </span>
-		          	    <span py:when="hostname" class="table_title">
-		          			Events table for host "${hostname}"
-				        </span>
-		          	    <span py:otherwise="" class="table_title">
-		          			Events table
-				        </span>
+		          	    <div py:when="hostname and servicename" class="table_title">
+		          			<span>Events table for service "${servicename}" on "${hostname}"</span>
+				        </div>
+		          	    <div py:when="hostname" class="table_title">
+		          			<span>Events table for host "${hostname}"</span>
+				        </div>
+		          	    <div py:otherwise="" class="table_title">
+		          			<span>Events table</span>
+				        </div>
 					</py:choose>
 			        
 		    	</th>  
@@ -100,7 +100,7 @@
 	        <tr>
 	            <th colspan="${columns_count}">
 	            
-		            <span class="navigation_arrow left_arrow">
+		            <div class="navigation_arrow left_arrow">
 				        <py:choose>
 					     <img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" />
 					     
@@ -116,9 +116,9 @@
 							    <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
 							</a>
 					    </py:choose>
-		            </span>
+		            </div>
 		
-		            <span class="navigation_arrow right_arrow">
+		            <div class="navigation_arrow right_arrow">
 				        <py:choose>
 					    	<img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" />
 				
@@ -134,32 +134,36 @@
 					        	<img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
 					     	</a>
 					    </py:choose>
-	            	</span>
+	            	</div>
 
 	            	<py:choose>
-		            	<span py:when="nb_pages > 1" class="pagination">
-			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-		          		    <br/>
-				            Pages
-
-					            <py:for each="p in range(1, nb_pages + 1)">
-		            				<py:choose>
-								  		<py:when test="p == page">${p}</py:when>
-								  		<py:when test="hostname and servicename">
-								  			<a href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': p, 'hostname': hostname, 'servicename': servicename})}">${p}</a>
-								  		</py:when>
-								  		<py:when test="hostname">
-								  			<a href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': p, 'hostname': hostname})}">${p}</a>
-								  		</py:when>
-								  		<py:otherwise>
-								  			<a href="${tg.url('/%d' % p)}">${p}</a>
-										</py:otherwise>
-		            				</py:choose>
-					            </py:for>
-				        </span>
-		            	<span py:otherwise="" class="line_pagination">
-			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-				        </span>
+		            	<div py:when="nb_pages > 1" class="pagination">
+		            		<span>
+				          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+			          		    <br/>
+					            Pages
+	
+						            <py:for each="p in range(1, nb_pages + 1)">
+			            				<py:choose>
+									  		<py:when test="p == page">${p}</py:when>
+									  		<py:when test="hostname and servicename">
+									  			<a href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': p, 'hostname': hostname, 'servicename': servicename})}">${p}</a>
+									  		</py:when>
+									  		<py:when test="hostname">
+									  			<a href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': p, 'hostname': hostname})}">${p}</a>
+									  		</py:when>
+									  		<py:otherwise>
+									  			<a href="${tg.url('/%d' % p)}">${p}</a>
+											</py:otherwise>
+			            				</py:choose>
+						            </py:for>
+							</span>
+				        </div>
+		            	<div py:otherwise="" class="line_pagination">
+		            		<span>
+			          			${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+				        	</span>
+				        </div>
 	            	</py:choose>
 				    
 	            </th>
