--- a/src/vigilo/themes/templates/vigiboard/history_table.html
+++ b/src/vigilo/themes/templates/vigiboard/history_table.html
@@ -20,27 +20,27 @@
 	        <tr>
 	            <th colspan="5">
 	            
-	            	<span class="navigation_arrow left_arrow">
+	            	<div class="navigation_arrow left_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
 					     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page - 1))}"><!--!
 					         --><img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 					     --></a>
 					    </py:choose>
-					</span>
+					</div>
 				    
-	            	<span class="navigation_arrow right_arrow">
+	            	<div class="navigation_arrow right_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
 					     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page + 1))}"><!--!
 					         --><img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 					     --></a>
 				    	</py:choose>
-					</span>
+					</div>
 				    
-		          	<span class="table_title">
-		          		Event #${idevent} history
-				    </span>
+		          	<div class="table_title">
+		          		 <span>Event #${idevent} history</span>
+				    </div>
 				    
 	            </th>
 	        </tr>
@@ -57,37 +57,41 @@
 	        <tr>
 	            <th colspan="5">
 	            
-		            <span class="navigation_arrow left_arrow">
+		            <div class="navigation_arrow left_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" /><!--!
 					     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page - 1))}"><!--!
 					         --><img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/><!--!
 					     --></a>
 					    </py:choose>
-		            </span>
+		            </div>
 	
-		            <span class="navigation_arrow right_arrow">
+		            <div class="navigation_arrow right_arrow">
 				        <py:choose><!--!
 					     --><img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" /><!--!
 					     --><a py:otherwise="" href="${tg.url('/event/%d/%d' % (idevent, page + 1))}"><!--!
 					         --><img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/><!--!
 					     --></a>
 					    </py:choose>
-					</span>
+					</div>
 		            
 	          	    <py:choose>
-		            	<span py:when="nb_pages > 1" class="pagination">
-			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-		          		    <br/>
-				            Pages 
-				            <py:for each="p in range(1, nb_pages + 1)">
-				                <a py:if="p != page" href="${tg.url('/%d' % p)}" py:content="p" />
-				                <span py:if="p == page" py:replace="p" />
-				            </py:for>
-				        </span>
-		            	<span py:otherwise="" class="line_pagination">
-			          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-				        </span>
+		            	<div py:when="nb_pages > 1" class="pagination">
+		            		<span>
+				          		${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+			          		    <br/>
+					            Pages 
+					            <py:for each="p in range(1, nb_pages + 1)">
+					                <a py:if="p != page" href="${tg.url('/event/%d/%d' % (idevent, p))}" py:content="p" />
+					                <span py:if="p == page" py:replace="p" />
+					            </py:for>
+					    	</span>
+				        </div>
+		            	<div py:otherwise="" class="line_pagination">
+		            		<span>
+			          			${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
+		          			</span>
+				        </div>
 	            	</py:choose>
 					
 	            </th>
