Changement de l'apparence d'un enregistrement (une ligne du tableau) dont on demande les détails.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2222 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -93,6 +93,9 @@ window.addEvent("domready", function () {
                     $$('DetailsDialog_${edname}').set('href', details.eventdetails['${edname}']);
                     </py:for>
                     window.details_dialog.setBusy(false);
+
+                    var details_link = $$$$('a[href="#' + details.idcorrevent + '"].Details_Link')[0];
+                    details_link.parentNode.parentNode.addClass('selectedRow');
                 },
                 onFailure: function (xhr) {
                     window.details_dialog.setBusy(false);
