Mise à jour du dialogue jxlib de /edit/set_mapnodehost avec le form+erreurs lorsque la validation échoue. Ajout de styles pour les erreurs (elles apparaissent sur une ligne séparée, en rouge).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2267 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -261,6 +261,11 @@ canvas {
     /*border: 2px dashed gray;*/
 }
 
+.fielderror {
+    display: block;
+    color: red;
+}
+
 /*
 .jxChromeDrag {
     opacity: 1 !important;
