--- a/src/vigilo/themes/templates/vigimap/link_form.html
+++ b/src/vigilo/themes/templates/vigimap/link_form.html
@@ -1,5 +1,6 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <h1>Link update!</h1>
+<!--    <h1>Link update!</h1> -->
+    <br />
     <fieldset>
     ${link_form(kw)}
     </fieldset>
