--- a/src/vigilo/themes/templates/vigimap/map_form.html
+++ b/src/vigilo/themes/templates/vigimap/map_form.html
@@ -1,5 +1,6 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <h1>Map update!</h1>
+<!--     <h1>Map update!</h1> -->
+    <br />
     ${map_form(kw)}
 </div>
 <!-- Ceci est un commentaire-->
