--- a/src/vigilo/themes/templates/vigimap/mapnode_form.html
+++ b/src/vigilo/themes/templates/vigimap/mapnode_form.html
@@ -1,5 +1,6 @@
 <div xmlns:py="http://genshi.edgewall.org/">
-    <h1>Node update!</h1>
+    <br />
+<!--    <h1>Node update!</h1> -->
     ${mapnode_form(kw, onsubmit=onsubmit)}
 </div>
 <!-- Ceci est un commentaire-->
