Erreur dans parametres pour activation singleGraph -> \host au lieu de host
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2327 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -26,7 +26,7 @@
         </div>
         <br />
         <div py:for="i in dhgs" py:strip="True">
-            <a href="singleGraph?\host=${dhgs[i][0]};graph=${dhgs[i][1]};start=${start};duration=${duration}">
+            <a href="singleGraph?host=${dhgs[i][0]};graph=${dhgs[i][1]};start=${start};duration=${duration}">
             <img border="0" src="getImage_png?host=${dhgs[i][0]};graph=${dhgs[i][1]};start=${start};duration=${duration};details=1" title='${dhgs[i][0]}'/>
             </a>
         </div>
