Modifs pour 1ere livraison du mode edition de vigimap
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2329 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -310,3 +310,19 @@ table tr td {
 	padding-top: 3px;
     padding-right: 20px;
 }
+
+#deleteconfirmtext {
+    margin: 10px 10px	
+}
+
+#deleteconfirmbuttons {
+	margin: 20px 20px
+}
+
+#deleteconfirmbutton1 {
+    margin: 0 10px
+}
+
+#deleteconfirmbutton2 {
+    margin: 0 5px
+}
