Ajout d'une règle pour afficher différemment la ligne sélectionnée lors du clic sur le menu de détails d'un événement (VigiBoard).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2351 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -35,7 +35,7 @@ body {
 .vigitable {
     margin: auto;
 	width: 99%;
-	border-collapse: collapse;
+	border-collapse: separate;
 }
 
 .vigitable .navigation_arrow * {
@@ -291,6 +291,7 @@ div.clearingdiv {
     font-weight: bold;
 }
 
+.plugin_checkbox,
 .plugin_details,
 .plugin_priority,
 .plugin_occurrences,
@@ -324,5 +325,9 @@ div.clearingdiv {
 .plugin_details img {
     width: 1.5em;
     height: 1.5em;
+}
+
+.vigitable tbody tr.selectedRow td {
+    border: 1px dashed #000000;
 }
 
