Oubli de commit
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2353 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -23,6 +23,7 @@
     <script type="text/javascript" src="${tg.url('/js/loader.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/legend.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/delete.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/mapElement.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/delete.js')}"></script>
