Ajout de tg.url() dans VigiMap.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2357 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -84,7 +84,7 @@
     -->
 
     <div id="loading">
-        <img alt="loading..." src="images/loading.gif" />
+        <img alt="loading..." src="${tg.url('images/loading.gif')}" />
     </div>
     <!--! L'apppel des deux fonctions suivantes (empty...) provoque l'injection dans la page html,
             des scripts javascript nécessaires à l'utilisation des toscawidgets dynforms dans une
