--- a/src/vigilo/themes/templates/vigimap/index.html
+++ b/src/vigilo/themes/templates/vigimap/index.html
@@ -66,7 +66,7 @@
     -->
 
     <div id="loading">
-        <img alt="loading..." src="images/loading.gif" />
+        <img alt="loading..." src="${tg.url('images/loading.gif')}" />
     </div>    
 
 </body>
