Ajout des références des exigences suivantes : - VIGILO_EXIG_VIGILO_BAC_0020; - VIGILO_EXIG_VIGILO_BAC_0040; - VIGILO_EXIG_VIGILO_BAC_0050; - VIGILO_EXIG_VIGILO_BAC_0060; - VIGILO_EXIG_VIGILO_BAC_0070; - VIGILO_EXIG_VIGILO_BAC_0080; - VIGILO_EXIG_VIGILO_BAC_0110. - VIGILO_EXIG_VIGILO_BAC_0130.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2376 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -36,7 +36,8 @@
 
     <div py:if="nb_links">
         <hr />
-
+        
+		<!--! Permet de satisfaire l'exigence VIGILO_EXIG_VIGILO_BAC_0130. -->
         <h2>External links</h2>
         <div id="external_links">
             <ul>
