--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -12,7 +12,7 @@
     </ul>
     <ul class="maps">
         <li py:for="map in maps">
-            <a href="maps/map?mapid=${map[0]}" > ${map[1]}</a>
+            <a href="index?mapid=${map[0]}" > ${map[1]}</a>
         </li>
     </ul>
     <py:choose test="">
