Mise à jour des templates de VigiBoard suite à la réécriture des formulaires ToscaWidgets: passage des valeurs à l'affichage à partir d'un formulaire statique (mise en conformité avec les recommandations de ToscaWidgets).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2404 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -11,7 +11,8 @@
 
 <py:def function="plugin_template(name, instance)">
 <!--! Le formulaire d'édition d'événements, généré par ToscaWidgets. -->
-    ${tmpl_context.edit_event_form()}
+    ${tmpl_context.edit_event_form(
+        dict(last_modification=tmpl_context.last_modification))}
 
 <!--! Le code JavaScript qui va permettre de gérer l'édition d'événements. -->
 <script type="text/javascript">
