--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="${tg.url('/js/Observer.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/selectmapgroup.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/fieldautocomplete.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/buttonColor.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/tg_submit.js')}"></script>
     <!--! Les lignes suivantes sont générées automatiquement par les fonctions empty-dynform et emptu-calendar
     <script type="text/javascript" src="/toscawidgets/resources/tw.dynforms.widgets/static/dynforms.js"></script>
