WIP sur les templates VigiGraph, il reste les sous-pages
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2490 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigigraph/index.html
+++ b/src/vigilo/themes/templates/vigigraph/index.html
@@ -4,27 +4,12 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude">
 
-<xi:include href="sidebars.html" />
 <xi:include href="master.html" />
 
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"></meta>
     <title>Loading VigiGraph...</title>
-    <script type="text/javascript" src="js/vigigraph.js"></script>
-    <link rel="search" type="application/opensearchdescription+xml" title="Vigigraph search" href="/rpc/getOpenSearch"></link>
-    <style type="text/css"><!--@import url(css/style.css); --></style>
+    <script type="text/javascript" src="${tg.url('js/vigigraph.js')}"></script>
   </head>
   <body>
-      <div class="header"><style type="text/css"><!--@import url(css/tmpl.default.css); --></style>
-      <table class="header_table">
-          <tr>
-              <td class="logo">
-                  <a href="/">
-                      <img class="logo" src="${tg.url('/images/vigilo.png')}" alt="Vigilo"/>
-                  </a> v2.0
-              </td>
-          </tr>
-      </table>
-      </div>
   </body>
 </html>
