--- a/src/vigilo/themes/templates/vigigraph/fullhostpage.html
+++ b/src/vigilo/themes/templates/vigigraph/fullhostpage.html
@@ -1,24 +1,15 @@
-<div xmlns:py="http://genshi.edgewall.org/">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+                      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+
+<xi:include href="master.html" />
+
     <head>
         <title>Graph Page for ${host}</title>
-        <meta http-equiv="Refresh" content="300"></meta >
-        <meta http-equiv="Pragma" content="no-cache"></meta >
-        <meta http-equiv="Cache-Control" content="no-cache"></meta >
-        <link rel="search" type="application/opensearchdescription+xml" title="Supervision search" href="getOpenSearch"></link>
-        <style type="text/css"><!--@import url(../styles/style.css); --></style>
     </head>
     <body class='main'>
-        <div class="header"><style type="text/css"><!--@import url(../styles/tmpl.default.css); --></style>
-            <table class="header_table">
-                <tr>
-                    <td class="logo">
-                        <a href="/proto4">
-                            <img class="logo" src="../styles/red15-logo-vigilo.png" alt="Vigilo"/>
-                        </a> v2.0
-                    </td>
-                </tr>
-            </table>
-        </div>
         <h2>Graph Page for ${host}</h2>
         <a href="supPage?host=${host}">${host}'s monitoring page</a>
         <div py:for="h in presets" py:strip="True">
@@ -31,4 +22,4 @@
             </a>
         </div>
     </body>
-</div>
+</html>
