--- a/src/vigilo/themes/templates/vigigraph/master.html
+++ b/src/vigilo/themes/templates/vigigraph/master.html
@@ -4,32 +4,32 @@
       xmlns:py="http://genshi.edgewall.org/"
       xmlns:xi="http://www.w3.org/2001/XInclude"
       py:strip="">
-    <xi:include href="header.html" />
-    <xi:include href="footer.html" />
 <head py:match="head" py:attrs="select('@*')">
-    <meta content="text/html; charset=UTF-8" http-equiv="content-type" py:replace="''"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
     <title py:replace="''">Your title goes here</title>
     <meta py:replace="select('*')"/>
+    <link rel="search" type="application/opensearchdescription+xml"
+        title="Vigigraph search" href="${tg.url('/rpc/getOpenSearch')}"/>
     <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/reset.css')}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/style.css')}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="${tg.url('/css/vigigraph.css')}" />
 </head>
 
 <body py:match="body" py:attrs="select('@*')">
-  ${header()}
-  <ul id="mainmenu">
-    <li class="first"><a href="${tg.url('/')}" class="${('', 'active')[defined('page') and page==page=='index']}">Welcome</a></li>
-    <span py:if="tg.auth_stack_enabled" py:strip="True">
-        <li py:if="not request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/login')}">Login</a></li>
-        <li py:if="request.identity" id="loginbtn" class="loginlogout"><a href="${tg.url('/logout_handler')}">Logout</a></li>
-    </span>
-  </ul>
-  <div id="content">
-    <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
-        <div py:if="flash" py:content="XML(flash)" />
-    </py:with>
-    <div py:replace="select('*|text()')"/>
-    <!-- End of content -->
-    ${footer()}
-  </div>
+    <div class="header">
+        <ul id="mainmenu">
+            <li class="first"><a href="${tg.url('/')}"><img class="logo" 
+                src="${tg.url('/images/vigilo.png')}" alt="Vigilo"/></a><span id="version">v2.0</span></li>
+            <span py:if="tg.auth_stack_enabled" py:strip="True">
+            <li py:if="not request.identity" id="loginbtn" class="loginlogout login"><a href="${tg.url('/login')}">Login</a></li>
+            <li py:if="request.identity" id="loginbtn" class="loginlogout logout"><a href="${tg.url('/logout_handler')}"> Logout</a></li>
+            </span>
+        </ul>
+    </div>
+    <div id="content">
+        <py:with vars="flash=tg.flash_obj.render('flash', use_js=False)">
+            <div py:if="flash" py:content="XML(flash)" />
+        </py:with>
+        <div py:replace="select('*|text()')"/>
+    </div>
 </body>
 </html>
