--- a/src/vigilo/themes/templates/vigigraph/searchhost.html
+++ b/src/vigilo/themes/templates/vigigraph/searchhost.html
@@ -1,31 +1,20 @@
-<div xmlns:py="http://genshi.edgewall.org/">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:py="http://genshi.edgewall.org/"
+      xmlns:xi="http://www.w3.org/2001/XInclude">
+    <xi:include href="master.html" />
     <head>
         <title>Vigigraph search</title>
-        <meta http-equiv="Refresh" content="300"></meta >
-        <meta http-equiv="Pragma" content="no-cache"></meta >
-        <meta http-equiv="Cache-Control" content="no-cache"></meta >
-        <style type="text/css"><!--@import url(../styles/style.css); --></style>
     </head>
-    <body>
-        <div class="header"><style type="text/css"><!--@import url(../styles/tmpl.default.css); --></style>
-            <table class="header_table">
-                <tr>
-                    <td class="logo">
-                        <a href="/proto4">
-                        <img class="logo" src="../styles/red15-logo-vigilo.png" alt="Vigilo"/>
-                        </a> v2.0
-                    </td>
-                </tr>
-            </table>
-        </div>
+    <body class="searchresults">
         <h1>Vigigraph search</h1>
         <h2>Results:</h2>
         <table>
-            <div py:for="h in hosts" py:strip="True">
-                <tr><td class="hostname">&mdash;${h}</td><td> 
-                <a href="supPage?host=${h}">Sup page</a></td><td> - </td><td>
-                <a href="metroPage?host=${h}">Metro page</a></td></tr>
-            </div>
+            <tr py:for="h in hosts">
+                <td class="hostname">&mdash; ${h}</td>
+                <td><a href="supPage?host=${h}">Sup page</a></td>
+                <td> - </td>
+                <td><a href="metroPage?host=${h}">Metro page</a></td>
+            </tr>
         </table>
     </body>
-</div>
+</html>
