--- a/src/vigilo/themes/templates/vigigraph/singlegraph.html
+++ b/src/vigilo/themes/templates/vigigraph/singlegraph.html
@@ -5,10 +5,10 @@
         <meta http-equiv="Pragma" content="no-cache"></meta>
         <meta http-equiv="Cache-Control" content="no-cache"></meta>
         <link rel="search" type="application/opensearchdescription+xml" title="Supervision search" href="getOpenSearch"></link>
-        <style type="text/css"><!--@import url(../styles/style.css); --></style>
+        <style type="text/css"><!--@import url(css/vigigraph.css); --></style>
     </head>
     <body class='main'>
-        <div class="header"><style type="text/css"><!--@import url(../styles/tmpl.default.css); --></style>
+        <div class="header">
             <table class="header_table">
                 <tr>
                     <td class="logo">
