--- a/src/vigilo/themes/templates/vigiboard/vigiboard.html
+++ b/src/vigilo/themes/templates/vigiboard/vigiboard.html
@@ -37,9 +37,9 @@
 </head>
 </py:match>
 
-<py:match path="body" once="true">
-<body py:with="body_attr = dict(select('@*|py:with'))"
-    py:attrs="body_attr.update(style='font-size:' + tg.session.get('fontsize', tg.config['vigiboard_font.size']) + ';' + body_attr.get('style', ''))">
+<py:match path="body" once="true" py:with="body_attr = dict(select('@*'))">
+<?python body_attr.update(dict(style='font-size:' + tg.session.get('fontsize', tg.config['vigiboard_font.size']) + ';' + body_attr.get('style', ''))) ?>
+<body py:attrs="body_attr">
 
 ${toolbar()}
 
