modif title vigimap
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@2505 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -55,7 +55,7 @@
 
 
     <div id="header">
-        <h1>VigiMap<span id="maptitle"></span></h1>
+        <h1>VigiMap ${l_("(edit mode)")}<span id="maptitle"></span></h1>
     </div>
 
     <div id="menu">
